--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "arctic-orchestra"
-version = "0.1.0"
+version = "0.1.3"
 description = "Arctic-Orchestra: A modular agent orchestration framework"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -11,8 +11,10 @@ authors = [
 requires-python = ">=3.9"
 
 dependencies = [
-    "python-dotenv>=1.2.1",
-    "requests>=2.32.5"
+    "python-dotenv==1.2.1",
+    "requests==2.32.5",
+    "google-genai==1.52.0",
+    "google-auth==2.43.0"
 ]
 
 [project.urls]
